# Eco-Node

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
dashboard_next/: package.json
dashboard_next/src/app/: page.tsx
dashboard_next/src/components/: ForecastChart.tsx  Globe.tsx  JobForm.tsx  KpiCard.tsx
dashboard_web/: app.js  index.html
econode/: __init__.py  audit.py  carbon.py  config.py  dag.py  executor.py  models.py  optimizer.py  predictor.py  pricing.py  regions.py  scheduler.py
econode/api/: __init__.py  main.py
tests/: __init__.py  test_aether.py
